# picky

./: .gitmodules  CMakeLists.txt
dependencies/: CMakeLists.txt
include/: BinaryFileReader.h
include/picky/: BinaryFileReader.h  ByteOrder.h  OpenFileError.h  ReadError.h  ReadFileError.h  SeekError.h  SeekFileError.h  endian.h  picky_endian.h
src/: BinaryFileReader.cpp  CMakeLists.txt  HostByteOrder.h.in  OpenFileError.cpp  ReadError.cpp  ReadFileError.cpp  SeekError.cpp  SeekFileError.cpp
test/: BinaryFileReader_tests.cpp  CMakeLists.txt
